--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,5 +1,5 @@
 import pandas as pd
 import numpy as np
-matplotlib
+pip install streamlit matplotlib
 import matplotlib.pyplot as plt
 import yfinance as yf
